--- a/v2/ical.net.collections/ical.net.collections/ical.net.collections.csproj
+++ b/v2/ical.net.collections/ical.net.collections/ical.net.collections.csproj
@@ -63,6 +63,7 @@
     <AssemblyName>ical.net.collections</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="System" />
     <Reference Include="System.Core" />
     <!--  <Reference Include="Microsoft.CSharp" />
     -->
